[package]
name = "timeseries-merge-benchmark"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "merge_benchmark"
harness = false
